Rename package to match repo, basic crash tests for input label components

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-a11y-components",
+  "name": "react-a11y-patterns",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
