--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-a11y-patterns",
   "version": "0.1.0",
   "private": true,
-  "main": "src/index.js",
+  "main": "dist/bundle.js",
   "dependencies": {
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
@@ -13,10 +13,16 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "bundle": "npx rollup -c"
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "babel": {
+    "presets": [
+      "@babel/preset-react"
+    ]
   },
   "browserslist": {
     "production": [
@@ -31,7 +37,11 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.0.0",
     "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.14.0"
+    "enzyme-adapter-react-16": "^1.14.0",
+    "rollup": "^1.17.0",
+    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-node-resolve": "^5.2.0"
   }
 }
