--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "eslintIgnore": ["dist/*"],
   "babel": {
     "presets": [
       "@babel/preset-react"
